# Ubuntu

./: README  hello_world.cpp
GTestSample/: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.tests.cpp
HelloWorld/: makefile
